// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormField /> renders a FormField correctly 1`] = `
.emotion-0 {
  margin-bottom: 1rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    
  </div>
  Field Child
  
</div>
`;

exports[`<FormField /> renders a FormField with a caption correctly 1`] = `
.emotion-0 {
  margin-bottom: 0.5rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #D93838;
  line-height: 1.5;
  font-size: 0.8125rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    
  </div>
  Field Child
  <span
    className="emotion-2"
    color="palette.red.default"
  >
    I am a caption
  </span>
</div>
`;

exports[`<FormField /> with label renders a FormField with a label correctly 1`] = `
.emotion-0 {
  margin-bottom: 1rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <label
        className="emotion-3"
        htmlFor="example"
      >
        My label
      </label>
    </div>
  </div>
  Field Child
  
</div>
`;

exports[`<FormField /> with labelAside renders a FormField with a label correctly 1`] = `
.emotion-0 {
  margin-bottom: 1rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <label
        className="emotion-3"
        htmlFor="example"
      >
        My label
      </label>
    </div>
    <div
      className="emotion-4"
      color="text.muted"
      fontSize="size4"
    >
      <div
        id="my-label-aside"
      >
        muffins
      </div>
    </div>
  </div>
  Field Child
  
</div>
`;
